--- a/pages/buy/buy.wxml
+++ b/pages/buy/buy.wxml
@@ -1,4 +1,4 @@
 <!--pages/buy/buy.wxml-->
 <view class="container">
-  <image style="width: 100%; height: 100%;" mode="aspectFit" src="../../images/buy.jpeg" show-menu-by-longpress="true" lazy-load="true"></image>
+  <image style="width: 100%; height: 100%;" mode="aspectFit" src="../../images/buy2021.jpeg" show-menu-by-longpress="true" lazy-load="true"></image>
 </view>
